--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -344,7 +344,7 @@ Each week includes the following components:
                 \item Identifies patterns, connections, and contradictions across the readings.
                 \item Highlights implications for public administration theory and practice.
             \end{itemize}
-            \item \textbf{Optional AI Integration}:
+            \item \textbf{AI Integration}:
             \begin{quote}
                 I’ve written a synthesis paper based on [number] readings about [topic]. \\ 
                 Here’s the draft: [Insert Draft]. \\ 
@@ -375,10 +375,10 @@ Each week includes the following components:
                 Could you evaluate whether the revisions address key feedback and suggest improvements for clarity or depth?
             \end{quote}
             \item Submit the final synthesis to Canvas.
-            \item \textbf{Optional Reflection}:
+            \item \textbf{Reflection}:
             \begin{itemize}
                 \item Reflect on your learning process and the feedback received.
-                \item Use ChatGPT to refine reflections:
+                \item Optional: Use ChatGPT to refine reflections:
                 \begin{quote}
                     I’ve written a reflection on my learning process for this week. \\ 
                     Here’s my reflection: [Insert Reflection]. \\ 
@@ -398,7 +398,7 @@ Each week includes the following components:
     \begin{itemize}
         \item Video lecture and foundational readings:
         \begin{itemize}
-            \item \citet{Wilson1887}, *The Study of Administration*.
+            \item \citet{wilson1887}, *The Study of Administration*.
             \item \citet{Weber1946}, *Bureaucracy*.
             \item \citet{gulick1937}, *Notes on the Theory of Organization*.
             \item \citet{Follett1926}, *The Giving of Orders*.
@@ -412,7 +412,7 @@ Each week includes the following components:
     \end{itemize}
 \end{itemize}
 
-\paragraph{Weeks 2–8: Standard Weekly Workflow}
+\paragraph{Weeks 2--8: Standard Weekly Workflow}
 Each week follows the established structure:
 \begin{itemize}
     \item Annotated Bibliography (due Tuesday before class).
@@ -484,38 +484,7 @@ Bonus Reflections & 5\% \\
 \end{tabular}
 \end{table}
 
-\subsubsection*{Rubrics}
-
-\paragraph{Annotated Bibliography Rubric}
-\begin{table}[h!]
-\centering
-\begin{tabular}{|l|c|c|c|}
-\hline
-\textbf{Criteria} & \textbf{Excellent (3)} & \textbf{Satisfactory (2)} & \textbf{Needs Improvement (1)} \\
-\hline
-Citation Format & Accurate APA/Chicago citation. & Minor formatting errors. & Significant errors. \\
-Summary & Clear and concise. Covers key points. & Partial summary or unclear. & Missing key details. \\
-Relevance & Strong, clear connection to topic. & Some connection to topic. & Unclear or weak connection. \\
-\hline
-\end{tabular}
-\end{table}
-
-\paragraph{Synthesis Paper Rubric}
-\begin{table}[h!]
-\centering
-\begin{tabular}{|l|c|c|c|}
-\hline
-\textbf{Criteria} & \textbf{Excellent (5)} & \textbf{Satisfactory (3)} & \textbf{Needs Improvement (1)} \\
-\hline
-Analysis & Thorough analysis with connections and contradictions. & Some connections but lacks depth. & Little analysis or connections. \\
-Organization & Clear structure and flow. & Somewhat organized. & Disorganized or unclear. \\
-Writing & Well-written, few errors. & Minor errors but readable. & Frequent errors, unclear. \\
-\hline
-\end{tabular}
-\end{table}
-
-
-Students may skip one week of the annotated bibliography, synthesis, and reflection assignment during the semester. This option is intended to accommodate unexpected events or personal commitments. If you choose to skip a week, please notify the professor in advance. In place of the final synthesis during the skip week place a note in the Canvas assignment indicating that you are using your skip week.
+\paragraph Note: Students may skip one week of the annotated bibliography, synthesis, and reflection assignment during the semester. This option is intended to accommodate unexpected events or personal commitments. If you choose to skip a week, please notify the professor in advance. In place of the final synthesis during the skip week place a note in the Canvas assignment indicating that you are using your skip week.
 
 \subsection*{2) Reading Discussion Facilitation}
 A group of students will be responsible for facilitating the discussion of the assigned readings each week. The facilitators will lead the class in a discussion of the readings, pose questions to stimulate critical thinking and analysis, and encourage active participation from all students. The facilitators will also provide a brief summary of the readings and highlight the key points for discussion. The facilitators will be selected at the beginning of the semester, and the schedule will be posted on \emph{Canvas}. The facilitators will be graded based on the following criteria:
@@ -533,88 +502,53 @@ A group of students will be responsible for facilitating the discussion of the a
 
 Students will complete a comprehensive general area essay exam as part of the MPA program's comprehensive exam requirement. The exam will consist of two questions from which students will choose one to answer. The questions will be based on the course readings and discussions and will require students to demonstrate their understanding of public administration's key concepts, theories, and debates. The exam will allow students to synthesize their learning in the course and demonstrate their ability to think critically and write clearly about complex issues in public administration. Students who do not pass the exam on the first attempt will have the opportunity to retake the exam once during finals week. The grade for the exam is pass/fail. Students who do not pass on the second attempt will be required to retake the course.
 
-\subsection*{4) Concentration Area Literature Review}
+\subsection*{4) Concentration Area Writing Project}
 
-\subsubsection*{Literature Review}
+\subsubsection*{Assignment Overview}
 
-Students will complete a literature review in their concentration area as part of the MPA program's comprehensive exam requirement. The literature review will examine practical and theoretical issues related to a specific public administration topic and synthesize essential findings and debates in the literature. This assignment allows students to deepen their knowledge of their concentration area and develop their research and writing skills. The literature review should be approximately 15 pages, double-spaced, in APA or Chicago author-date style.
+This capstone project allows students to deepen their understanding of their MPA concentration area by integrating theoretical frameworks with real-world challenges. Using \textbf{Dr. Mona Hanna-Attisha's \textit{What the Eyes Don’t See} (2018)} as a central text, students will explore how the Flint water crisis exemplifies issues in their concentration, such as public finance, human resources, local government management, or public policy. The assignment is scaffolded into stages to guide students toward producing a polished, analytical final paper.
 
 \paragraph*{Objectives:}
 \begin{itemize}
-    \item Deepen knowledge in a specific concentration area.
-    \item Develop research and writing skills.
-    \item Synthesize practical and theoretical issues in public administration.
+    \item Develop expertise in a specific public administration concentration area.
+    \item Enhance research, analytical, and writing skills.
+    \item Synthesize theoretical frameworks with practical case studies.
+    \item Critically examine the Flint water crisis and its implications for public administration.
 \end{itemize}
 
-\paragraph*{Requirements:}
+\paragraph*{Assignment Stages and Requirements:}
 \begin{enumerate}
-    \item \textbf{Topic Selection:}
+    \item \textbf{Topic Selection (10\% of assignment grade):}
     \begin{itemize}
-        \item Choose a topic within your concentration area in consultation with the professor.
-        \item Ensure the topic addresses both practical and theoretical dimensions of public administration.
-        \item Formulate a clear research question that guides your literature review.
+        \item Submit a one-page proposal outlining your topic, research question, and how you will integrate \textit{What the Eyes Don’t See} into your analysis.
     \end{itemize}
-    \item \textbf{Annotated Bibliography:}
+    \item \textbf{Literature Review (40\% of assignment grade):}
     \begin{itemize}
-        \item Compile an annotated bibliography of at least 10-12 peer-reviewed sources.
-        \item Provide a summary and critical evaluation of each source's relevance to your research question.
+        \item Draft a literature review that synthesizes key themes from \textit{What the Eyes Don’t See}, course readings, and additional scholarly materials.
+        \item Discuss how the Flint water crisis ties into themes relevant to your concentration area.
     \end{itemize}
-    \item \textbf{Theoretical Book Requirement:}
+    \item \textbf{Final Paper (50\% of assignment grade):}
     \begin{itemize}
-        \item Select a theoretical book related to your concentration area to incorporate into your literature review.
-        \item Analyze the book’s contribution to the field and its relevance to your topic.
-    \end{itemize}
-    \item \textbf{Literature Sources:}
-    \begin{itemize}
-        \item Utilize a minimum of 15 peer-reviewed articles or books.
-        \item Incorporate recent studies to ensure an up-to-date analysis of the topic.
-    \end{itemize}
-    \item \textbf{Structure:}
-    \begin{itemize}
-        \item \textbf{Introduction:} State the research question and discuss its significance in the field of public administration.
-        \item \textbf{Literature Review:} Summarize and synthesize key findings and debates from the literature, demonstrating an understanding of both practical and theoretical perspectives.
-        \item \textbf{Analysis:} Critically evaluate the literature, identify gaps, and discuss possible directions for future research.
-        \item \textbf{Conclusion:} Summarize the main findings and their implications for public administration theory and practice.
-    \end{itemize}
-    \item \textbf{Final Draft Deliverable:}
-    \begin{itemize}
-        \item Submit the final draft of your literature review on Canvas by the deadline specified in the course syllabus.
-        \item Ensure that the final draft adheres to all assignment requirements and is professionally formatted.
+        \item Submit a polished final paper that integrates feedback from earlier stages.
+        \item Analyze the Flint water crisis through the lens of your concentration, connecting theoretical frameworks to practical lessons.
+        \item Ensure the paper is 12-15 pages (excluding references), double-spaced, and formatted in APA or Chicago author-date style.
     \end{itemize}
 \end{enumerate}
 
 \paragraph*{Submission Timeline:}
 \begin{itemize}
-    \item \textbf{Topic Outline:} Due Week 12
-    \item \textbf{Annotated Bibliography:} Due Week 13
+    \item \textbf{Topic Outline:} Due Week 13
     \item \textbf{First Draft:} Due Week 14
-    \item \textbf{Final Draft:} Due Week 16
+    \item \textbf{Final Paper:} Due Week 16
 \end{itemize}
 
-\subsubsection*{Example Term Paper Research Questions by Concentration}
-
-\paragraph*{1. Public Policy}
+\paragraph*{Grading Criteria:}
 \begin{itemize}
-    \item \textbf{Research Question:} How do stakeholder engagement processes influence the implementation of environmental policies at the local level?
-    \item \textbf{Explanation:} This question allows the student to explore both the practical aspects (stakeholder engagement) and theoretical dimensions (policy implementation models) of public policy.
-\end{itemize}
-
-\paragraph*{2. Local Government Management}
-\begin{itemize}
-    \item \textbf{Research Question:} What are the most effective strategies for improving intergovernmental collaboration in metropolitan regions?
-    \item \textbf{Explanation:} This question addresses the practical challenges of collaboration between local governments and evaluates the theoretical frameworks for intergovernmental relations.
-\end{itemize}
-
-\paragraph*{3. Public Finance}
-\begin{itemize}
-    \item \textbf{Research Question:} How does participatory budgeting affect fiscal transparency and public trust in local governments?
-    \item \textbf{Explanation:} The question allows exploration of the impact of participatory processes on financial governance, connecting theoretical insights with real-world financial practices.
-\end{itemize}
-
-\paragraph*{4. Human Resources (HR)}
-\begin{itemize}
-    \item \textbf{Research Question:} What role do diversity and inclusion policies play in reducing turnover in public sector organizations?
-    \item \textbf{Explanation:} This question allows the student to analyze how diversity policies are implemented in public HR and to evaluate their theoretical effectiveness on employee retention.
+    \item \textbf{Depth of Analysis (30\%):} Engagement with \textit{What the Eyes Don’t See} and the broader literature.
+    \item \textbf{Use of Sources (20\%):} Relevance and critical evaluation of sources.
+    \item \textbf{Clarity and Organization (20\%):} Logical structure and coherent arguments.
+    \item \textbf{Writing Quality (15\%):} Grammar, style, and proper formatting.
+    \item \textbf{Completeness and Accuracy (15\%):} Adherence to assignment requirements and deadlines.
 \end{itemize}
 
 
@@ -631,16 +565,14 @@ The due dates for the course requirements are as follows:
         \end{itemize}
         \item MPA Comprehensive General Area Essay Exam:
         \begin{itemize}
-            \item Distributed on 10/31
-            \item Due on 11/7
+            \item Distributed on Friday, 4/11 at 8:00 a.m.
+            \item Due on Thursday, 4/17 by 4:59 p.m.
         \end{itemize}
-        \item Concentration Area Literature Review:
+        \item Concentration Area Paper:
         \begin{itemize}
-            \item Topic Selection: Due on 11/14
-            \item Annotated Bibliography: Due on 11/21
-            \item Draft: Due on 12/5
-            \item Peer Review: Due on 12/12
-            \item Final Draft: Due on 12/19
+            \item Topic Selection: Due on 4/20
+            \item Literature Review Draft: Due on 4/27
+            \item Final Draft: Due on 5/13 by 9:00 p.m.
         \end{itemize}
     \end{itemize}
 
@@ -677,29 +609,32 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
         \toprule
     \textbf{Assignment} & \textbf{Percentage} \\
     \midrule
-    Weekly Annotated Bibliographies & 5\% \\
-    Weekly Kritik Assignment & 5\% \\
-    Weekly Syntheses & 15\% \\
+    Weekly Readings Assignments & 60\% \\
     Reading Discussion Facilitation & 5\% \\
     MPA Comprehensive General Area Essay Exam & 35\% \\
-    Concentration Area Literature Review Annotated Bibliography & 5\% \\
-    Concentration Area Literature Review Draft & 10\% \\
-    Concentration Area Literature Review Peer Review & 5\% \\
-    Concentration Area Literature Review Final Draft & 15\% \\
+    Concentration Area Paper & 30\% \\
     \bottomrule
     \end{tabular}
     \label{tab:grade-weights}
     \end{table}
     
-    \subsubsection*{Bonus Points}
-    \begin{itemize}
-        \item Bonus points will be awarded for exceptional work, including insightful comments in class discussions and high-quality written assignments. Bonus points will be added to your final grade at the end of the semester.
-        \item Bonus points will be awarded for personal reflections on the weekly assignments. The reflections are an opportunity for you to engage in self-assessment and continuous improvement, enhancing your learning and professional development.
-    \end{itemize}
-    
 \section{Course Schedule}
 
-\subsection*{Week 1 -- 8/29: Public Administration Theory I}
+\subsection*{Week 1, Starting 1/19: Introduction and Syllabus Review}
+\begin{itemize}
+    \item \textbf{Asynchronous Online Session}: Introduction to the Course and Syllabus Review
+    \item Readings:
+        \begin{itemize}
+            \item Review the course syllabus
+        \end{itemize}
+    \item Assignments:
+        \begin{itemize}
+            \item Read and annotate the syllabus
+            \item Prepare for Week 2 readings
+        \end{itemize}
+\end{itemize}
+
+\subsection*{Week 2, Starting 1/26: Public Administration Theory I}
 \begin{itemize}
     \item \textbf{In-person Session}: Introduction to the Course
     \item Readings:
@@ -715,8 +650,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
     \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
-
-\subsection*{Week 2 -- 9/5: Public Administration Theory II}
+\subsection*{Week 3, Starting 2/2: Public Administration Theory II}
 \begin{itemize}
     \item \textbf{In-person Session}: Public Administration in the U.S. Context
     \item Readings:
@@ -728,7 +662,8 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
         \item Due Friday: Peer Review
         \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
-\subsection*{Week 3 -- 9/12: Ethics and Values in Public Administration}
+
+\subsection*{Week 4, Starting 2/9: Ethics and Values in Public Administration}
 \begin{itemize}
     \item \textbf{In-person Session}: Public Service Values and Ethics
     \item Readings:
@@ -744,7 +679,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
         \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
-\subsection*{Week 4 -- 9/19: Leadership and Motivation}
+\subsection*{Week 5, Starting 2/16: Leadership and Motivation}
 \begin{itemize}
     \item \textbf{In-person Session}: Leadership and Motivation
     \item Readings:
@@ -760,7 +695,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
         \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
-\subsection*{Week 5 -- 9/26: Performance Management}
+\subsection*{Week 6, Starting 2/23: Performance Management}
 \begin{itemize}
     \item \textbf{In-person Session}: Performance Management
     \item Readings:
@@ -769,14 +704,14 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{Denhardt2015}, \emph{The New Public Service}, Chapter 9 
             \item \citet{douglas2021}, ``Getting a Grip on Performance of Collaborations'' 
             \item \citet{marvel2015}, ``Unconscious Bias in Citizens' Evaluations\dots'' 
-            %\item \citet{nicholson-crotty2004}, ``Public Management and Organizational Performance'' 
+            \item \citet{nicholson-crotty2004}, ``Public Management and Organizational Performance'' 
         \end{itemize}
         \item Due Wednesday: Annotated Bibliography and Synthesis
         \item Due Friday: Peer Review
         \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
-\subsection*{Week 6 -- 10/3: Street-Level Bureaucrats}
+\subsection*{Week 7, Starting 3/2: Street-Level Bureaucrats}
 \begin{itemize}
     \item \textbf{In-person Session}: Street-Level Bureaucrats
     \item Readings:
@@ -789,7 +724,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
         \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
-\subsection*{Week 7 -- 10/10: Privatization and Contracting}
+\subsection*{Week 8, Starting 3/9: Privatization and Contracting}
 \begin{itemize}
     \item \textbf{In-person Session}: Privatization and Contracting
     \item Readings:
@@ -805,7 +740,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
         \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
-\subsection*{Week 8 -- 10/17: 21st Century Challenges}
+\subsection*{Week 9, Starting 3/16: 21st Century Challenges}
 \begin{itemize}
     \item \textbf{In-person Session}: 21st Century Challenges
     \item Readings:
@@ -820,55 +755,60 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
         \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
-\subsection*{Week 9 -- 10/24: Comprehensive General Area Essay}
+\subsection*{Week 10, Starting 3/23: Capstone}
 \begin{itemize}
-    \item \textbf{Asynchronous Session}: Comprehensive General Area Essay Study Break
+    \item \textbf{In-person Session}: Capstone Synthesis
+    \item Readings:
+        \begin{itemize}
+            \item Review key themes from the course
+            \item Peer brainstorming and feedback on capstone ideas
+        \end{itemize}
+        \item Due Thursday: Capstone Draft
+        \item Due Friday: Peer Review
+        \item Due Saturday: Final Capstone Submission
 \end{itemize}
 
-
-\subsection*{Week 10 -- 10/31: Comprehensive General Area Essay Exam}
+\subsection*{Spring Break, Starting 3/30}
 \begin{itemize}
-    \item \textbf{Asynchronous Session}: Comprehensive General Area Essay Exam Distributed
-\end{itemize}   
-
-\subsection*{Week 11 -- 11/7: Comprehensive General Area Essay Exam}
-\begin{itemize}
-    \item \textbf{Asynchronous Session}: \textbf{Comprehensive General Area Essay Exam Due}
+    \item \textbf{No Classes}: Enjoy your break!
 \end{itemize}
 
-\subsection*{Week 12 -- 11/14: Concentration Area Literature Review}
+\subsection*{Week 11, Starting 4/6: Comprehensive General Area Essay Exam}
 \begin{itemize}
-    \item \textbf{In-Person Session}: Concentration Area Literature Review
-    \item Literature review expectations and guidelines
-    \item Due: Literature Review Topic outline
+    \item \textbf{Asynchronous Session}: Comprehensive General Area Essay Exam Distributed on Friday at 8:00 a.m.
 \end{itemize}
 
-\subsection*{Week 13 -- 11/21: Concentration Area Literature Review}
+\subsection*{Week 12, Starting 4/13: Comprehensive General Area Essay Exam}
 \begin{itemize}
-    \item \textbf{Asynchronous Session}: Concentration Area Literature Review
-    \item Due: Literature Review Annotated Bibliography
+    \item \textbf{Asynchronous Session}: \textbf{Comprehensive General Area Essay Exam Due on Thursday}
 \end{itemize}
 
-\subsection*{Week 14 -- 12/5: Concentration Area Literature Review}
+\subsection*{Week 13, Starting 4/20: Concentration Area Paper}
 \begin{itemize}
-    \item \textbf{Asynchronous Session}: Concentration Area Literature Review
+    \item \textbf{Asynchronous Session}: Concentration Area Paper
+    \item Paper expectations and guidelines 
+    \item Schedule a 1:1 meeting to discuss topic selection at \href{https://dadams.io/appointments}{dadams.io/appointments}
+    \item Due: Topic Selection
+\end{itemize}
+
+\subsection*{Week 14, Starting 4/27: Concentration Area Paper}
+\begin{itemize}
+    \item \textbf{Asynchronous Session}: Concentration Area Paper
     \item Due: Literature Review Draft
 \end{itemize}
 
-\subsection*{Week 15 -- 12/12: Concentration Area Literature Review}
+\subsection*{Week 15, Starting 5/4: Concentration Area Paper}
 \begin{itemize}
-    \item \textbf{In-Person Session}: Concentration Area Literature Review
-    \item Due: Literature Review Peer Review
+    \item \textbf{In-Person Session}
     \item Course Wrap-Up and Final Reflections
     \item Potluck Celebration
 \end{itemize}
 
-\subsection*{Week 16 -- 12/19: Course Conclusion}
+\subsection*{Week 16, Starting 5/11: Concentration Area Paper}
 \begin{itemize}
-    \item \textbf{Asynchronous Session}: Course Conclusion
-    \item Due: Concentration Area Literature Review Final Draft
+    \item \textbf{Asynchronous Session}: Concentration Area Paper
+    \item \textbf{Due: Concentration Area Paper Final Draft on 5/13 by 9:OO p.m.}
 \end{itemize}
-
 
             \singlespace
             \bibliographystyle{apsr}
