zoom tims, asynch info

--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -46,64 +46,62 @@
 \author{POSC 521 — Spring 2025}
 \date{Tuesdays at 7:00 in GH 208}
     \maketitle
-    \subsection*{Session Schedule:}
-    
-    \begin{multicols}{2}
-    \subsubsection*{In-Person Sessions}
-    \begin{itemize}[leftmargin=*]
-      \item August 29
-      \item September 5, 12, 19, 26
-      \item October 3, 10, 17
-      \item November 14
-      \item December 12
-    \end{itemize}
-    
-    \columnbreak
-    
-    \subsubsection*{Asynchronous Online Sessions}
-    \begin{itemize}[leftmargin=*]
-      \item January 21
-      \item October 24, 31
-      \item November 7, 28
-      \item December 5, 19
-    \end{itemize}
-    \end{multicols}
+        \subsection*{Session Schedule:}
+                    
+                    \begin{multicols}{2}
+                    \subsubsection*{In-Person Sessions}
+                    \begin{itemize}[leftmargin=*]
+                        \item January 28
+                        \item February 4, 11, 18, 25
+                        \item March 4, 11, 18, 25
+                        \item May 6
+                    \end{itemize}
+                    
+                    \columnbreak
+                    
+                    \subsubsection*{Asynchronous Online Sessions}
+                    \begin{itemize}[leftmargin=*]
+                        \item January 21
+                        \item April 8, 15, 22, 29
+                        \item May 13
+                    \end{itemize}
+                    \end{multicols}
 
 
-    \subsection*{Professor: David P. Adams, Ph.D.}
+                    \subsection*{Professor: David P. Adams, Ph.D.}
 
-    \subsubsection*{Contact Information:}
-    
-    \begin{itemize}
-        \item Office: 516 Gordon Hall
-        \item Phone/SMS: (657) 278-4770
-        \item Zoom Meeting ID: 334 750 2369 or \href{https://fullerton.zoom.us/j/3347502369}{\texttt{fullerton.zoom.us/j/3347502369}} 
-        \item website: \href{https://dadams.io}{\texttt{dadams.io}}
-        \item email: \href{dpadams@fullerton.edu}{\texttt{dpadams@fullerton.edu}}
-        \item Office hours: Tuesdays \& Thursdays from 9:30 to 11:00, Thursdays from 5:30 to 6:30, and by \href{https://dadams.io/appointments}{appointment}.
-        \item Schedule meetings throughout the week: \href{https://dadams.io/appointments}{\texttt{dadams.io/appointments}}
-    \end{itemize}
-    
-    \section{Catalog Description}
-    Concepts, models and ideologies of public administration within the larger political system. Course restricted to students in their final six units of graduate work.
-    
-    \section{Course Description}
-    The capstone seminar in the Master of Public Administration program at Cal State Fullerton examines concepts, models, and ideologies of public administration within the larger political system.
+                    \subsubsection*{Contact Information:}
+                    
+                    \begin{itemize}
+                            \item Office: 516 Gordon Hall
+                            \item Phone/SMS: (657) 278-4770
+                            \item Zoom Meeting ID: 334 750 2369 or \href{https://fullerton.zoom.us/j/3347502369}{\texttt{fullerton.zoom.us/j/3347502369}} 
+                            \item website: \href{https://dadams.io}{\texttt{dadams.io}}
+                            \item email: \href{dpadams@fullerton.edu}{\texttt{dpadams@fullerton.edu}}
+                            \item Office hours: Tuesdays \& Thursdays from 9:30 to 11:00, Thursdays from 5:30 to 6:30, and by \href{https://dadams.io/appointments}{appointment}.
+                            \item Schedule meetings throughout the week: \href{https://dadams.io/appointments}{\texttt{dadams.io/appointments}}
+                    \end{itemize}
+                    
+                    \section{Catalog Description}
+                    Concepts, models and ideologies of public administration within the larger political system. Course restricted to students in their final six units of graduate work.
+                    
+                    \section{Course Description}
+                    The capstone seminar in the Master of Public Administration program at Cal State Fullerton examines concepts, models, and ideologies of public administration within the larger political system.
 
-    \section{Course Prerequisites}
-    This course is restricted to students in their final six units of graduate work in the MPA program. Students must have completed all other required courses in the MPA program before enrolling in this course.
-    
-    \section{Course Objectives}
-    This course is designed to accomplish five interrelated objectives:
-    
-    \begin{enumerate}
-        \item \textbf{Theory Examination}: We will delve into the most important theories and literature in public administration, fostering a deep understanding of the field.
-        \item \textbf{Literature Review}: You will complete a literature review in your concentration area, allowing you to specialize and delve deeper into a specific aspect of public administration. This preparation will be crucial for the general concentration portion of the comprehensive exams.
-        \item \textbf{Writing Skills}: This course will enhance your writing skills, focusing on clear, concise, and effective communication. This preparation will be crucial for the general theory portion of the comprehensive exams.
-        \item \textbf{Critical Thinking}: You will develop your critical thinking skills, learning to analyze and evaluate complex arguments and theories. This preparation will be crucial for the general theory portion of the comprehensive exams.
-        \item \textbf{Professional Development}: This course will help you develop the skills and knowledge necessary for a successful career in public administration. You will learn about the latest trends and issues in the field and how to navigate the challenges of public service.
-    
-    \end{enumerate}
+                    \section{Course Prerequisites}
+                    This course is restricted to students in their final six units of graduate work in the MPA program. Students must have completed all other required courses in the MPA program before enrolling in this course.
+                    
+                    \section{Course Objectives}
+                    This course is designed to accomplish five interrelated objectives:
+                    
+                    \begin{enumerate}
+                            \item \textbf{Theory Examination}: We will delve into the most important theories and literature in public administration, fostering a deep understanding of the field.
+                            \item \textbf{Literature Review}: You will complete a literature review in your concentration area, allowing you to specialize and delve deeper into a specific aspect of public administration. This preparation will be crucial for the general concentration portion of the comprehensive exams.
+                            \item \textbf{Writing Skills}: This course will enhance your writing skills, focusing on clear, concise, and effective communication. This preparation will be crucial for the general theory portion of the comprehensive exams.
+                            \item \textbf{Critical Thinking}: You will develop your critical thinking skills, learning to analyze and evaluate complex arguments and theories. This preparation will be crucial for the general theory portion of the comprehensive exams.
+                            \item \textbf{Professional Development}: This course will help you develop the skills and knowledge necessary for a successful career in public administration. You will learn about the latest trends and issues in the field and how to navigate the challenges of public service.
+                    
+                    \end{enumerate}
     
 \section{University-wide Student Learning Outcomes}
     As a capstone course in the MPA program, this course is designed to help students achieve the following university-wide student learning outcomes:
@@ -633,7 +631,6 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item Prepare for Week 2 readings
         \end{itemize}
 \end{itemize}
-
 \subsection*{Week 2, Starting 1/26: Public Administration Theory I}
 \begin{itemize}
     \item \textbf{In-person Session}: Introduction to the Course
@@ -645,7 +642,8 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{Follett1926}, ``The Giving of Orders'' 
             \item \citet{simon1946}, ``Proverbs of Administration'' 
         \end{itemize}
-    \item Due Wednesday: Annotated Bibliography and Synthesis
+    \item Due Tuesday: Annotated Bibliography
+    \item Due Thursday: Synthesis Paper
     \item Due Friday: Peer Review
     \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
@@ -658,9 +656,10 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{Stivers2000}, \emph{Bureau Men, Settlement Women} 
             \item \citet{Denhardt2015}, \emph{The New Public Service}, Chapters 1--4 
         \end{itemize}
-        \item Due Wednesday: Annotated Bibliography and Synthesis
-        \item Due Friday: Peer Review
-        \item Due Saturday: Final Synthesis and Personal Reflection
+    \item Due Tuesday: Annotated Bibliography
+    \item Due Thursday: Synthesis Paper
+    \item Due Friday: Peer Review
+    \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
 \subsection*{Week 4, Starting 2/9: Ethics and Values in Public Administration}
@@ -674,9 +673,10 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{Adams2009}, ``Unmasking Administrative Evil'' 
             \item \citet{Denhardt2015}, \emph{The New Public Service}, Chapter 7 
         \end{itemize}
-        \item Due Wednesday: Annotated Bibliography and Synthesis
-        \item Due Friday: Peer Review
-        \item Due Saturday: Final Synthesis and Personal Reflection
+    \item Due Tuesday: Annotated Bibliography
+    \item Due Thursday: Synthesis Paper
+    \item Due Friday: Peer Review
+    \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
 \subsection*{Week 5, Starting 2/16: Leadership and Motivation}
@@ -690,9 +690,10 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{maslow1943}, ``A Theory of Human Motivation'' 
             \item \citet{Fairholm2004}, ``Different Perspectives on the Practice of Leadership'' 
         \end{itemize}
-        \item Due Wednesday: Annotated Bibliography and Synthesis
-        \item Due Friday: Peer Review
-        \item Due Saturday: Final Synthesis and Personal Reflection
+    \item Due Tuesday: Annotated Bibliography
+    \item Due Thursday: Synthesis Paper
+    \item Due Friday: Peer Review
+    \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
 \subsection*{Week 6, Starting 2/23: Performance Management}
@@ -706,9 +707,10 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{marvel2015}, ``Unconscious Bias in Citizens' Evaluations\dots'' 
             \item \citet{nicholson-crotty2004}, ``Public Management and Organizational Performance'' 
         \end{itemize}
-        \item Due Wednesday: Annotated Bibliography and Synthesis
-        \item Due Friday: Peer Review
-        \item Due Saturday: Final Synthesis and Personal Reflection
+    \item Due Tuesday: Annotated Bibliography
+    \item Due Thursday: Synthesis Paper
+    \item Due Friday: Peer Review
+    \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
 \subsection*{Week 7, Starting 3/2: Street-Level Bureaucrats}
@@ -719,9 +721,10 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{Lipsky2010}, \emph{Street-Level Bureaucracy}, Chapters 1--10 
             \item \citet{Denhardt2015}, \emph{The New Public Service}, Chapters 5--6 
         \end{itemize}
-        \item Due Wednesday: Annotated Bibliography and Synthesis
-        \item Due Friday: Peer Review
-        \item Due Saturday: Final Synthesis and Personal Reflection
+    \item Due Tuesday: Annotated Bibliography
+    \item Due Thursday: Synthesis Paper
+    \item Due Friday: Peer Review
+    \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
 \subsection*{Week 8, Starting 3/9: Privatization and Contracting}
@@ -735,9 +738,10 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{jos2009}, ``Keeping it Public''
             \item \citet{raineyComparingPublicPrivate2000}, ``Comparing Public and Private Organizations''
         \end{itemize}
-        \item Due Wednesday: Annotated Bibliography and Synthesis
-        \item Due Friday: Peer Review
-        \item Due Saturday: Final Synthesis and Personal Reflection
+    \item Due Tuesday: Annotated Bibliography
+    \item Due Thursday: Synthesis Paper
+    \item Due Friday: Peer Review
+    \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
 \subsection*{Week 9, Starting 3/16: 21st Century Challenges}
@@ -750,9 +754,10 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{mccandless2022}, ``A Long Road''
             \item \citet{Denhardt2015}, \emph{The New Public Service}, Chapters 10--12 
         \end{itemize}
-        \item Due Wednesday: Annotated Bibliography and Synthesis
-        \item Due Friday: Peer Review
-        \item Due Saturday: Final Synthesis and Personal Reflection
+    \item Due Tuesday: Annotated Bibliography
+    \item Due Thursday: Synthesis Paper
+    \item Due Friday: Peer Review
+    \item Due Saturday: Final Synthesis and Personal Reflection
 \end{itemize}
 
 \subsection*{Week 10, Starting 3/23: Capstone}
@@ -763,9 +768,9 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item Review key themes from the course
             \item Peer brainstorming and feedback on capstone ideas
         \end{itemize}
-        \item Due Thursday: Capstone Draft
-        \item Due Friday: Peer Review
-        \item Due Saturday: Final Capstone Submission
+    \item Due Thursday: Capstone Draft
+    \item Due Friday: Peer Review
+    \item Due Saturday: Final Capstone Submission
 \end{itemize}
 
 \subsection*{Spring Break, Starting 3/30}
@@ -780,7 +785,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
 
 \subsection*{Week 12, Starting 4/13: Comprehensive General Area Essay Exam}
 \begin{itemize}
-    \item \textbf{Asynchronous Session}: \textbf{Comprehensive General Area Essay Exam Due on Thursday}
+    \item \textbf{Asynchronous Session}: Comprehensive General Area Essay Exam Due on Thursday at 4:59 p.m.
 \end{itemize}
 
 \subsection*{Week 13, Starting 4/20: Concentration Area Paper}
@@ -788,6 +793,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
     \item \textbf{Asynchronous Session}: Concentration Area Paper
     \item Paper expectations and guidelines 
     \item Schedule a 1:1 meeting to discuss topic selection at \href{https://dadams.io/appointments}{dadams.io/appointments}
+    \item Host 1:1 meetings on 4/22 at 7:00 - 9:00 p.m. at \href{https://fullerton.zoom.us/j/3347502639}{fullerton.zoom.us/j/3347502639}
     \item Due: Topic Selection
 \end{itemize}
 
